Implemented intents UI extension

--- a/TellJokeIntentsUI/Info.plist
+++ b/TellJokeIntentsUI/Info.plist
@@ -24,19 +24,15 @@
 	<dict>
 		<key>NSExtensionAttributes</key>
 		<dict>
-			<key>IntentsRestrictedWhileLocked</key>
-			<array/>
-			<key>IntentsRestrictedWhileProtectedDataUnavailable</key>
-			<array/>
 			<key>IntentsSupported</key>
 			<array>
 				<string>TellJokeIntent</string>
 			</array>
 		</dict>
+		<key>NSExtensionMainStoryboard</key>
+		<string>MainInterface</string>
 		<key>NSExtensionPointIdentifier</key>
-		<string>com.apple.intents-service</string>
-		<key>NSExtensionPrincipalClass</key>
-		<string>$(PRODUCT_MODULE_NAME).IntentHandler</string>
+		<string>com.apple.intents-ui-service</string>
 	</dict>
 </dict>
 </plist>
